# nice-fetch-ai-adapter

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  renovate.json  run.py  setup.cfg
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: release.yaml  test.yaml
.github/workflows/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
app/: main.py
app/core/: config.py
app/routes/: __init__.py  posts.py
extra/: helper.py  test_2.py
sampleAgent/: sampleAgent.py
tests/: __init__.py  conftest.py  test_drcp_event_handler.py  test_endpoints.py  test_post_query.py  test_receive_response.py
