[tool.poetry]
name = "nice-fetch-ai-adapter"
version = "0.1.2"
description = ""
authors = ["Helena Adamkova <58051865+Ellenn-A@users.noreply.github.com>"]
license = "Apache2"
readme = "README.md"

[tool.poetry.scripts]
start = "app.main:start"

[tool.poetry.dependencies]
python = "~3.12"
fastapi = "^0.111.0"
uvicorn = "~0.30.1"
pytest-mock = "^3.14.0"
uagents = "^0.12.3"
mock = "^5.1.0"
requests-mock = "^1.12.1"
flake8 = "^7.1.0"
httpx = "^0.27.0"
asgi-lifespan = "^2.1.0"
pytest-asyncio = "^0.23.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
