[tool.poetry]
name = "nice-fetch-ai-adapter"
version = "0.1.2"
description = ""
authors = ["Helena Adamkova <58051865+Ellenn-A@users.noreply.github.com>"]
license = "Apache2"
readme = "README.md"

[tool.poetry.scripts]
start = "app.main:start"

[tool.poetry.dependencies]
python = "~3.12.7"
fastapi = "^0.115.0"
uvicorn = "~0.31.0"
pytest-mock = "^3.14.0"
uagents = "^0.15.2"
mock = "^5.1.0"
requests-mock = "^1.12.1"
flake8 = "^7.1.1"
httpx = "^0.27.2"
asgi-lifespan = "^2.1.0"
pytest-asyncio = "^0.24.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
